# caffeine

./: .ccls  .gitignore  CMakeLists.txt  README.md  clang-perf-simd.mk  final-simd.mk  final-slow.mk  final.mk  gcc-debug-simd.mk  gcc-debug-slow.mk  gcc-perf-simd.mk  gcc-perf-slow.mk  makefile  script.sh  simd.mk  slow.mk
.github/workflows/: checks.yml  clang-perf-simd.yml  final-simd.yml  final-slow.yml  final.yml  gcc-debug-simd.yml  gcc-debug-slow.yml  gcc-perf-simd.yml  gcc-perf-slow.yml
bench/: main.c
src/background/: CMakeLists.txt  background.c  background.h
src/barista/: CMakeLists.txt  barista.c  barista.h
src/debug/: debug.h
src/header/: header.c  header.h
src/middleware/: middleware.c  middleware.h
src/requester/: CMakeLists.txt  requester.c  requester.h
src/responder/: CMakeLists.txt  responder.c  responder.h
src/server/: CMakeLists.txt  server.c  server.h
src/utils/: CMakeLists.txt  utils.c  utils.h
tests/: CMakeLists.txt  background.c  barista.c  header.c  middleware.c  requester.c  responder.c  server.c  utils.c
